--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,14 @@ h1 {
   color: #1E4062;
 }
 
+p {
+  margin: 0;
+}
+
+.todo-input {
+  width: 500px
+}
+
 .button {
   border-color: #1E4062;
   border-radius: 6px;
@@ -23,30 +31,11 @@ h1 {
   cursor: pointer;
 }
 
-/* Todo画面 */
-.logout-form {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
-.logout {
-  border: none;
-  background-color: inherit;
-  cursor: pointer;
-  font-size: 16px;
-  color: #1E4062;
-}
-
 .todo-form {
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 10px;
-}
-
-input {
-  width: 500px;
 }
 
 
@@ -69,9 +58,6 @@ input {
   margin: 10px 0;
 }
 
-p {
-  margin: 0;
-}
 
 .list-todo {
   margin-top: 50px;
@@ -85,26 +71,4 @@ p {
   font-size: 24px;
   font-weight: bold;
   color: #1E4062;
-}
-
-/* ユーザー登録＆ログイン画面 */
-.form {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.form-input {
-  width: 100%;
-  height: 32px;
-}
-
-a {
-  text-decoration: none;
-  color: #1E4062;
-}
-
-.error {
-  color: rgb(201, 2, 2);
 }
